[gd_scene load_steps=5 format=2]

[ext_resource path="res://playground/pong/logic/pong.gd" type="Script" id=1]
[ext_resource path="res://playground/pong/separator.png" type="Texture" id=2]
[ext_resource path="res://playground/pong/paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://playground/pong/ball.tscn" type="PackedScene" id=4]

[node name="Pong" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 400.0
color = Color( 0.141176, 0.152941, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 2 )

[node name="Player1" parent="." instance=ExtResource( 3 )]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 32.49, 188.622 )
left = true

[node name="Player2" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 608.88, 188.622 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 320.387, 189.525 )

[node name="ScoreLeft" type="Label" parent="."]
margin_left = 240.0
margin_top = 10.0
margin_right = 280.0
margin_bottom = 30.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "0"
align = 1

[node name="ScoreRight" type="Label" parent="."]
margin_left = 360.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 30.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "0"
align = 1

[node name="WinnerLeft" type="Label" parent="."]
visible = false
margin_left = 190.0
margin_top = 170.0
margin_right = 267.0
margin_bottom = 184.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "The Winner!"

[node name="WinnerRight" type="Label" parent="."]
visible = false
margin_left = 380.0
margin_top = 170.0
margin_right = 457.0
margin_bottom = 184.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "The Winner!"

[node name="ExitGame" type="Button" parent="."]
visible = false
margin_left = 280.0
margin_top = 340.0
margin_right = 360.0
margin_bottom = 360.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Exit Game"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 320, 200 )
current = true
[connection signal="pressed" from="ExitGame" to="." method="_on_exit_game_pressed"]

[editable path="Player1"]

[editable path="Player2"]
